composer: allow nette/utils v4.0

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 		"php": ">= 7.1",
 		"nette/application": "^3.0",
 		"nette/di": "^3.0",
-		"nette/utils": "^3.0",
+		"nette/utils": "^3.0 || ^4.0",
 		"ext-json": "*"
     },
 	"require-dev": {
